--- a/Atividades/MatchingGame/index.html
+++ b/Atividades/MatchingGame/index.html
@@ -406,13 +406,13 @@ function ensureUserIsAuthenticated(callback) {
             const data = await response.text();
             const lines = data.split('\n').filter(line => line.trim() !== '');
 
-           lessonData = lines.map((line, index) => {
-    const [type, lesson, explanation, modalText] = line.split('|').map(item => item.trim());
+         lessonData = lines.map((line, index) => {
+    const parts = line.split('|').map(item => item.trim());
     return {
-        img: `${imageBasePath}imagem${index + 1}.png`, // imagemX.png
-        title: lesson,       // Título da lição
-        text: explanation,   // Explicação (coluna direita)
-        modalText: modalText || explanation, // Texto do modal (ou explicação, se o campo estiver vazio)
+        img: `${imageBasePath}imagem${index + 1}.png`,
+        title: parts[1] || '', // Título da lição
+        text: parts[2] || '',  // Explicação (coluna direita)
+        modalText: parts[3] || parts[2] || '', // Texto do modal (fallback para explicação)
         matchIndex: index + 1
     };
 });
@@ -492,18 +492,17 @@ function ensureUserIsAuthenticated(callback) {
         return;
     }
 
-    const data = lessonData[index];  // Dados do texto.txt
-    const bibleData = bibleLessonData[index]; // Dados do bible_lessons.txt
+    const data = lessonData[index]; 
 
     const imageContainer = document.getElementById('image-container');
     const lessonImage = document.getElementById('lesson-image');
     const lessonTitle = document.getElementById('lesson-title');
     const lessonText = document.getElementById('lesson-text');
 
-    // Configurar os dados no modal
-    lessonImage.src = data.img;
-    lessonTitle.textContent = data.title;       // Título da lição
-    lessonText.textContent = data.modalText;    // Texto específico para o modal
+    // Verificar se os dados existem antes de exibir
+    lessonImage.src = data.img || ''; // Evitar erros se a imagem estiver ausente
+    lessonTitle.textContent = data.title || 'No title'; // Evitar texto vazio
+    lessonText.textContent = data.modalText || 'No description available'; // Texto do modal
 
     imageContainer.style.display = 'flex';
 }
