--- a/Level1/Unit2/propaganda.html
+++ b/Level1/Unit2/propaganda.html
@@ -162,141 +162,149 @@
         </p>
 
         <!-- Links to Topics -->
-        <div class="links">
-            <a href="#" class="topic-link" data-popup="storycards-popup">StoryCards: Learn English with Biblical Stories</a>
-            <a href="#" class="topic-link" data-popup="flashcards-popup">Flashcards: Interactive Vocabulary Building</a>
-            <a href="#" class="topic-link" data-popup="memorygame-popup">Memory Game: Enhance Vocabulary Through Play</a>
-            <a href="#" class="topic-link" data-popup="wordsearch-popup">Word Search: Fun with Vocabulary Puzzles</a>
-            <a href="#" class="topic-link" data-popup="grammar-popup">Grammar: Mastering English in Context</a>
-            <a href="#" class="topic-link" data-popup="exercises-popup">Grammar Exercises: Practice Makes Perfect</a>
-            <a href="#" class="topic-link" data-popup="speak-popup">Speak: Pronunciation Practice with Robot Samuel</a>
-            <a href="#" class="topic-link" data-popup="hannahvideos-popup">HannahVideos: Engaging Learning Through Videos</a>
-            <a href="#" class="topic-link" data-popup="lessons-popup">Exploring Biblical Lessons: Matching Game & Life Lessons</a>
-            <a href="#" class="topic-link" data-popup="tests-popup">Tests: Assessing Your Progress</a>
-        </div>
+<div class="links">
+    <a href="#" class="topic-link" data-popup="storycards-popup">StoryCards: Learn English with Biblical Stories</a>
+    <a href="#" class="topic-link" data-popup="flashcards-popup">Flashcards: Interactive Vocabulary Building</a>
+    <a href="#" class="topic-link" data-popup="memorygame-popup">Memory Game: Enhance Vocabulary Through Play</a>
+    <a href="#" class="topic-link" data-popup="wordsearch-popup">Word Search: Fun with Vocabulary Puzzles</a>
+    <a href="#" class="topic-link" data-popup="grammar-popup">Grammar: Mastering English in Context</a>
+    <a href="#" class="topic-link" data-popup="quizzes-popup">Quizzes: Perguntas & Respostas Interativas</a>
+    <a href="#" class="topic-link" data-popup="speak-popup">Speak Cards: Pratique a Pronúncia de Forma Interativa</a>
+    <a href="#" class="topic-link" data-popup="hannahvideos-popup">HannahVideos: Engaging Learning Through Videos</a>
+    <a href="#" class="topic-link" data-popup="lessons-popup">Exploring Biblical Lessons: Matching Game & Life Lessons</a>
+    <a href="#" class="topic-link" data-popup="spelling-tools-popup">Ferramentas de Ortografia: Praticando a Escrita Correta</a>
+    <a href="#" class="topic-link" data-popup="tests-popup">Tests: Assessing Your Progress</a>
+</div>
     </div>
 
     <!-- Pop-up Modals -->
     
-    <!-- StoryCards Popup -->
-    <div id="storycards-popup" class="popup">
-        <div class="popup-content">
-            <span class="close">&times;</span>
-            <h2>StoryCards: Learn English with Biblical Stories</h2>
-            <p>
-                StoryCards are designed to teach English in a meaningful way by using Biblical stories that connect grammar, vocabulary, and textual comprehension. Each story is carefully crafted to cover specific grammar and vocabulary topics, making learning engaging and significant.
-            </p>
-            <!-- Add more detailed content as needed -->
-        </div>
+   <!-- StoryCards Popup -->
+<div id="storycards-popup" class="popup">
+    <div class="popup-content">
+        <span class="close">&times;</span>
+        <h2>StoryCards: Learn English with Biblical Stories</h2>
+        <p>
+            StoryCards are designed to teach English in a meaningful way by using Biblical stories that connect grammar, vocabulary, and textual comprehension. Each story is carefully crafted to cover specific grammar and vocabulary topics, making learning engaging and significant.
+        </p>
     </div>
+</div>
 
-    <!-- Flashcards Popup -->
-    <div id="flashcards-popup" class="popup">
-        <div class="popup-content">
-            <span class="close">&times;</span>
-            <h2>Flashcards: Interactive Vocabulary Building</h2>
-            <p>
-                Flashcards reinforce vocabulary learning through dynamic and visual means. Each card displays an image on one side and the corresponding word on the other, facilitating easy memorization and association.
-            </p>
-            <!-- Add more detailed content as needed -->
-        </div>
+<!-- Flashcards Popup -->
+<div id="flashcards-popup" class="popup">
+    <div class="popup-content">
+        <span class="close">&times;</span>
+        <h2>Flashcards: Interactive Vocabulary Building</h2>
+        <p>
+            Flashcards reinforce vocabulary learning through dynamic and visual means. Each card displays an image on one side and the corresponding word on the other, facilitating easy memorization and association.
+        </p>
     </div>
+</div>
 
-    <!-- Memory Game Popup -->
-    <div id="memorygame-popup" class="popup">
-        <div class="popup-content">
-            <span class="close">&times;</span>
-            <h2>Memory Game: Enhance Vocabulary Through Play</h2>
-            <p>
-                The Memory Game combines fun and learning, helping students reinforce vocabulary and word memorization through an interactive matching game format.
-            </p>
-            <!-- Add more detailed content as needed -->
-        </div>
+<!-- Memory Game Popup -->
+<div id="memorygame-popup" class="popup">
+    <div class="popup-content">
+        <span class="close">&times;</span>
+        <h2>Memory Game: Enhance Vocabulary Through Play</h2>
+        <p>
+            The Memory Game combines fun and learning, helping students reinforce vocabulary and word memorization through an interactive matching game format.
+        </p>
     </div>
+</div>
 
-    <!-- Word Search Popup -->
-    <div id="wordsearch-popup" class="popup">
-        <div class="popup-content">
-            <span class="close">&times;</span>
-            <h2>Word Search: Fun with Vocabulary Puzzles</h2>
-            <p>
-                Word Search activities enhance vocabulary learning by challenging students to find and recognize words in a grid, improving spelling and visual word recognition in an enjoyable way.
-            </p>
-            <!-- Add more detailed content as needed -->
-        </div>
+<!-- Word Search Popup -->
+<div id="wordsearch-popup" class="popup">
+    <div class="popup-content">
+        <span class="close">&times;</span>
+        <h2>Word Search: Fun with Vocabulary Puzzles</h2>
+        <p>
+            Word Search activities enhance vocabulary learning by challenging students to find and recognize words in a grid, improving spelling and visual word recognition in an enjoyable way.
+        </p>
     </div>
+</div>
 
-    <!-- Grammar Popup -->
-    <div id="grammar-popup" class="popup">
-        <div class="popup-content">
-            <span class="close">&times;</span>
-            <h2>Grammar: Mastering English in Context</h2>
-            <p>
-                Grammar lessons are presented in a contextualized and practical manner, integrating with vocabulary and stories to help students understand and apply grammatical rules effectively.
-            </p>
-            <!-- Add more detailed content as needed -->
-        </div>
+<!-- Grammar Popup -->
+<div id="grammar-popup" class="popup">
+    <div class="popup-content">
+        <span class="close">&times;</span>
+        <h2>Grammar: Mastering English in Context</h2>
+        <p>
+            Grammar lessons are presented in a contextualized and practical manner, integrating with vocabulary and stories to help students understand and apply grammatical rules effectively.
+        </p>
     </div>
+</div>
 
-    <!-- Grammar Exercises Popup -->
-    <div id="exercises-popup" class="popup">
-        <div class="popup-content">
-            <span class="close">&times;</span>
-            <h2>Grammar Exercises: Practice Makes Perfect</h2>
-            <p>
-                Engage in interactive grammar exercises that reinforce the rules learned, connecting directly with the vocabulary and context from the stories to ensure comprehensive understanding and application.
-            </p>
-            <!-- Add more detailed content as needed -->
-        </div>
+<!-- Quizzes Popup -->
+<div id="quizzes-popup" class="popup">
+    <div class="popup-content">
+        <span class="close">&times;</span>
+        <h2>Quizzes: Perguntas & Respostas Interativas</h2>
+        <p>
+            O que é: Um jogo de perguntas voltado para o conteúdo bíblico, linguístico e gramatical de cada lição, com feedback imediato sobre acertos e erros.
+            Por que é incrível: Promove uma competição saudável que motiva o aluno a revisar tudo o que aprendeu, tornando o processo de aprendizado mais dinâmico e engajador.
+        </p>
     </div>
+</div>
 
-    <!-- Speak Popup -->
-    <div id="speak-popup" class="popup">
-        <div class="popup-content">
-            <span class="close">&times;</span>
-            <h2>Speak: Pronunciation Practice with Robot Samuel</h2>
-            <p>
-                Practice your pronunciation with Robot Samuel, an AI tool that provides immediate feedback and helps you improve your speaking skills through interactive voice recognition technology.
-            </p>
-            <!-- Add more detailed content as needed -->
-        </div>
+<!-- Speak Popup -->
+<div id="speak-popup" class="popup">
+    <div class="popup-content">
+        <span class="close">&times;</span>
+        <h2>Speak Cards: Pratique a Pronúncia de Forma Interativa</h2>
+        <p>
+            Speak Cards são cartões que mostram imagens e palavras que podem ser ouvidas pelo aluno. Em seguida, o aluno pronuncia a palavra do cartão, e o app avalia se a pronúncia está correta ou errada. Essa ferramenta ajuda a melhorar a confiança e a precisão na fala de maneira prática e divertida.
+        </p>
     </div>
+</div>
 
-    <!-- HannahVideos Popup -->
-    <div id="hannahvideos-popup" class="popup">
-        <div class="popup-content">
-            <span class="close">&times;</span>
-            <h2>HannahVideos: Engaging Learning Through Videos</h2>
-            <p>
-                HannahVideos are central to the course, tailored for each unit to reflect Biblical themes, grammatical content, and vocabulary. These engaging videos help reinforce learning through visual and auditory means.
-            </p>
-            <!-- Add more detailed content as needed -->
-        </div>
+<!-- HannahVideos Popup -->
+<div id="hannahvideos-popup" class="popup">
+    <div class="popup-content">
+        <span class="close">&times;</span>
+        <h2>HannahVideos: Engaging Learning Through Videos</h2>
+        <p>
+            HannahVideos are central to the course, tailored for each unit to reflect Biblical themes, grammatical content, and vocabulary. These engaging videos help reinforce learning through visual and auditory means.
+        </p>
     </div>
+</div>
 
-    <!-- Matching Game & Life Lessons Popup -->
-    <div id="lessons-popup" class="popup">
-        <div class="popup-content">
-            <span class="close">&times;</span>
-            <h2>Exploring Biblical Lessons: Matching Game & Life Lessons</h2>
-            <p>
-                Connect Biblical lessons to real-life situations through Matching Games and Life Lessons activities, fostering reflection and practical application of learned values in both linguistic and spiritual contexts.
-            </p>
-            <!-- Add more detailed content as needed -->
-        </div>
+<!-- Matching Game & Life Lessons Popup -->
+<div id="lessons-popup" class="popup">
+    <div class="popup-content">
+        <span class="close">&times;</span>
+        <h2>Exploring Biblical Lessons: Matching Game & Life Lessons</h2>
+        <p>
+            Connect Biblical lessons to real-life situations through Matching Games and Life Lessons activities, fostering reflection and practical application of learned values in both linguistic and spiritual contexts.
+        </p>
     </div>
+</div>
 
-    <!-- Tests Popup -->
-    <div id="tests-popup" class="popup">
-        <div class="popup-content">
-            <span class="close">&times;</span>
-            <h2>Tests: Assessing Your Progress</h2>
-            <p>
-                Regular tests serve as essential tools for evaluating your understanding and mastery of the material. They help track your progress and identify areas that need further improvement.
-            </p>
-            <!-- Add more detailed content as needed -->
-        </div>
+<!-- Ferramentas de Ortografia Popup -->
+<div id="spelling-tools-popup" class="popup">
+    <div class="popup-content">
+        <span class="close">&times;</span>
+        <h2>Ferramentas de Ortografia: Praticando a Escrita Correta</h2>
+        <p>
+            <strong>1. Missing Words</strong><br>
+            O aluno vê uma imagem e deve escrever corretamente a palavra correspondente.<br>
+            Por que é incrível: Desenvolve a precisão ortográfica e incentiva o pensamento rápido sobre as letras que formam cada vocábulo.<br><br>
+            <strong>2. Mixed Letters</strong><br>
+            O aluno reorganiza letras embaralhadas para formar a palavra correta.<br>
+            Por que é incrível: Treina a memória visual, reforça a ortografia e é uma forma de exercício interativo e desafiador.
+        </p>
     </div>
+</div>
+
+<!-- Tests Popup -->
+<div id="tests-popup" class="popup">
+    <div class="popup-content">
+        <span class="close">&times;</span>
+        <h2>Tests: Assessing Your Progress</h2>
+        <p>
+            Regular tests serve as essential tools for evaluating your understanding and mastery of the material. They help track your progress and identify areas that need further improvement.
+        </p>
+    </div>
+</div>
 
     <!-- JavaScript for Pop-up Functionality -->
     <script>
